Bug #59342 innodb status prints "purge trx" next to any thread with id 0

rb://596
approved by: Sunny

Do not print "purge trx" with trxs not started yet.
Use trx->op_info to identify purge trx.